Fixed CSS error causing notification dropdown to not be right-aligned. Added CSS making text-highlight color to be ULM gold color.

--- a/src/frontend/public/app.css
+++ b/src/frontend/public/app.css
@@ -22,3 +22,8 @@ button.fc-roomLabel-button, button.fc-roomLabel-button:hover {
 .cursor-p {
 	cursor: pointer;
 }
+
+::selection {
+	background: #bd955a;
+	color: #fff;
+}
